Implementing function to generate random phrases

--- a/Phrases of the day/Phrases of the day/Base.lproj/Main.storyboard
+++ b/Phrases of the day/Phrases of the day/Base.lproj/Main.storyboard
@@ -48,10 +48,16 @@
                                 <state key="normal" title="New phrase">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="newPhrase:" destination="BYZ-38-t0r" eventType="touchUpInside" id="l0G-CX-e9D"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="labelResult" destination="a49-7w-jtE" id="81O-n9-CYE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
